Mirati Profile Update

--- a/companies/invitae.html
+++ b/companies/invitae.html
@@ -106,7 +106,7 @@
                               <p class="profiles">
                                    They just replaced their CEO last year with Ken Knight. So far I like his strategy to cut costs and 
                                    focus on growing the company in key markets. They have a lot of debt so he has a huge challenge ahead 
-                                   of him. They just did a refinancing of their debt to 2028. They cut costs significantly from $850 billion 
+                                   of him. They just did a refinancing of their debt to 2028. They cut costs significantly from $850 million 
                                    a year in cash burn down to a projected $275 million for 2023. He has really turned around this company while 
                                    maintaining a good growth rate. They continue to grow revenues while cutting costs. 
                               </p>
