--- a/companies/mirati.html
+++ b/companies/mirati.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/15/2023</p>
+                    <p class="updated">Last Updated 2/28/2023</p>
 
                     <h1 class="company-name"><a href="https://www.mirati.com/">Mirati Therapeutics</a></h1>
 
@@ -95,7 +95,8 @@
                                    in development targeting different pathways that drive cancer growth. There are many pathways 
                                    inside cells that can mutate and drive the growth of cancer cells. Finding these genetic 
                                    mutations and developing small molecule inhibitors to target those specific mutations is what 
-                                   targeted therapy is all about. 
+                                   targeted therapy is all about. They have multiple drugs in development targeting these different 
+                                   pathways like TAM, KRAS and PRMT5.
                               </p>
                          </section>  
 
@@ -104,15 +105,16 @@
                               <p class="profiles">
                                    David Meek took over the CEO from Charles Baum last year. I know Charles was a founder 
                                    scientist so it makes sense they would bring in someone who knows commercial sales as they move into 
-                                   being a commercial company. Only time will tell how well he does for taking the company into its next 
-                                   stage of life.
+                                   being a commercial company. So far, he has done a good job and got Krazati commercially approved. 
+                                   Now they are ramping up the commercial sales. It will take time so see how competitive they can be in 
+                                   this space.
                               </p>
                          </section> 
                          
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                                   Adagrasib targets a mutation in a key growth pathway called KRAS G12C. The pathway is the RAS pathway 
+                                   Krazati targets a mutation in a key growth pathway called KRAS G12C. The pathway is the RAS pathway 
                                    which is a key growth pathway in all cells. Mutations in this pathway drive uncontrolled cell growth. 
                                    KRAS is a form of RAS that affects tissues like the Lungs, Pancreas and Colon. There are different mutations 
                                    for KRAS with G12C making up about 32% of the KRAS mutation types. It's one of the most common and plays a big 
@@ -122,18 +124,23 @@
                               <p class="profiles">
                                    MRTX1133 targets another mutation of KRAS with the G12D mutation. This is the second most common type of KRAS 
                                    mutation representing about 23% of the KRAS mutations. This plays a larger role in Pancreatic cancer and less of 
-                                   a role in NSCLC. This is in IND enabling studies with no data yet.
+                                   a role in NSCLC. This just started phase 1 in February.
                               </p>
                               <p class="profiles">
                                    Sitravatinib targets a family of kinases called the TAM family of kinases. This family shows strong promise at
                                    affecting cells within the tumor microenvironment. It has multiple benefits like shifting Macrophages back from 
                                    the M2 subtype to the M1 subtype which makes them able to target tumor cells. This is in a long term Overall Survival 
-                                   trial in combination with PD-1 inhibitors. 
+                                   trial in combination with PD-1 inhibitors. They expect a data readout in Q2 of 2023.
                               </p>
                               <p class="profiles">
                                    MRTX1719 is a PRMT5 inhibitor for MTAP deleted cancers. There is scientific evidence to show that MTAP deleted 
                                    cancers have a high dependence on PRMT5. This drug is designed to target those cancers by blocking this pathway 
-                                   they have become dependent on. This is just starting phase 1 and has no data yet.
+                                   they have become dependent on. They expect data from the phase 1 trial in 2H of 2023.
+                              </p>
+                              <p class="profiles">
+                                   MRTX0902 is a SOS1 inhibitor which plays a role in activating RAS. By inhibiting SOS1, this drug 
+                                   would block RAS activation. This will most likely be developed in combination with the KRAS 
+                                   inhibitors as a companion drug.
                               </p>
                          </section>  
 
@@ -143,7 +150,7 @@
                                    Cash $1.1 billion
                               </p>
                               <p class="profiles">
-                                   Adagrasib affects KRAS G12C in NSCLC and CRC. This is about 10,000 patients in NSCLC, of which, they will compete with other companies 
+                                   Krazati affects KRAS G12C in NSCLC and CRC. This is about 10,000 patients in NSCLC, of which, they will compete with other companies 
                                    in this indication. I think they could get at least half of them since they have best in class data with CNS penetration.
                                    At a price of $200,000, that would be $1 billion in sales. I think it could expand to $1.5 billion if CRC is 
                                    successful. I would give this a 3x multiple on the $1 billion that is commercial. That is $3 billion in value.
@@ -172,40 +179,67 @@
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   BeiGene has a license for Sitravatinib in the China Region. They will pay up to $123 million in milestones. 
+                                   They also pay tiered royalties from mid single digits up to 20%.
+                              </p>
+                              <p class="profiles">
+                                   Zai Labs has a license for Krazati in the China Region. They will pay up to $273 million in milestones. 
+                                   they will also pay royalties in the high teens to low twenties.
+                              </p>
+                              <p class="profiles">
+                                   Pfizer bought Array which licensed Krazati to Mirati. Mirati has to pay up to $337 in milestones along with 
+                                   royalties in the high single digits to mid teens.
                               </p>
                          </section>
 
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
-                                   Adagrasib CRC ongoing Phase 1/2 
+                                   Krazati in 1st Line NSCLC with Pembro Expect Update 2H of 2023
                               </p>
                               <p class="profiles">
-                                   MRTX1133 Start Phase 1 in early 2023
+                                   Krazati in 1st Line Monotherapy NSCLC with TPS of Less Than 1% Update 2H of 2023
                               </p>
                               <p class="profiles">
-                                   Sitravatinib Phase 3 Ongoing
+                                   Krazati in 1st Line with Pembro Plus Platinum Based Chemotherapy Phase 1b has Started
                               </p>
                               <p class="profiles">
-                                   MRTX1719 Dose Escalation Study Ongoing
+                                   Krazati approval in EU for NSCLC expected in Q3
+                              </p>
+                              <p class="profiles">
+                                   Krazati in CRC with Cetuximab Expect to Submit SNDA in Q4 2023 
+                              </p>
+                              <p class="profiles">
+                                   Krazati in CRC with Cetuximab vs Chemo in 2nd line Expects Data in 2024
+                              </p>
+                              <p class="profiles">
+                                   Krazati in Other KRAS Tumor Types Data in Q2 of 2023
+                              </p>
+                              <p class="profiles">
+                                   MRTX1133 Started Phase 1 Will Begin This Quarter
+                              </p>
+                              <p class="profiles">
+                                   Sitravatinib Phase 3 Data Expected Q2 of 2023
+                              </p>
+                              <p class="profiles">
+                                   MRTX1719 Data Expected in 2H of 2023
                               </p>
                          </section> 
 
                          <section class="section-container">
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
-                                   <a href="https://ir.mirati.com/press-releases/press-release-details/2022/Mirati-Therapeutics-Presents-Late-Breaking-Results-Evaluating-Concurrent-Adagrasib-and-Pembrolizumab-in-First-Line-AdvancedMetastatic-Non-Small-Cell-Lung-Cancer-NSCLC/default.aspx">
-                                   Adagrasib + PD-1 data in First Line
+                                   <a href="https://ir.mirati.com/press-releases/press-release-details/2022/Mirati-Therapeutics-Presents-Late-Breaking-Results-Evaluating-Concurrent-Krazati-and-Pembrolizumab-in-First-Line-AdvancedMetastatic-Non-Small-Cell-Lung-Cancer-NSCLC/default.aspx">
+                                   Krazati + PD-1 data in First Line
                                    </a>
                               </p>
                               <p class="profiles">
-                                   <a href="https://ir.mirati.com/press-releases/press-release-details/2022/Mirati-Therapeutics-Presents-Late-Breaking-Adagrasib-Monotherapy-and-Combination-Results-in-Advanced-Colorectal-Cancer/default.aspx">
-                                   Adagrasib CRC Data
+                                   <a href="https://ir.mirati.com/press-releases/press-release-details/2022/Mirati-Therapeutics-Presents-Late-Breaking-Krazati-Monotherapy-and-Combination-Results-in-Advanced-Colorectal-Cancer/default.aspx">
+                                   Krazati CRC Data
                                    </a>
                               </p>
                               <p class="profiles">
-                                   <a href="https://ir.mirati.com/press-releases/press-release-details/2022/Mirati-Therapeutics-Presents-Late-Breaking-Adagrasib-Monotherapy-and-Combination-Results-in-Advanced-Colorectal-Cancer/default.aspx">
+                                   <a href="https://ir.mirati.com/press-releases/press-release-details/2022/Mirati-Therapeutics-Presents-Late-Breaking-Krazati-Monotherapy-and-Combination-Results-in-Advanced-Colorectal-Cancer/default.aspx">
                                    Sitravatinib Phase 2 Data
                                    </a>
                               </p>
