--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/28/2023: </strong> I update the profile for <a href="companies/mirati.html">MRTX</a>
+                                   after doing the 10K. 
+                              </p>
+                              <p> 
                                    <strong>2/28/2023: </strong> I update the profile for <a href="companies/invitae.html">NVTA</a>
                                    after doing the 10K. 
                               </p>
@@ -141,20 +145,6 @@
                               <p> 
                                    <strong>2/26/2023: </strong> I added several more data readouts to the Clinical Data page. I added
                                    both NTLA2001 and NTLA2002 along with Exa-cel data. 
-                              </p>
-                              <p> 
-                                   <strong>2/25/2023: </strong> I added the first data readout overview using
-                                    <a href="clinicaldata/datareadout.html#rly4008">RLY-4008 Phase 1 Data</a>
-                                   to the clinical data section for learning.
-                              </p>
-                              <p> 
-                                   <strong>2/25/2023: </strong> I updated the <a href="innovation/innovation.html">Innovation Page</a>
-                                   with a new look. I added list of companies to each theme along with links to the company's profile page.
-                              </p>
-                              <p>
-                                   <strong>2/23/2023: </strong> I started building out the Clinical Data section of 
-                                   the site. Its currently under construction so it will probably be a mess until I get
-                                   the pages laid out. 
                               </p>
                          </div>
                     </section>
