Schrodinger Profile Update

--- a/companies/schrodinger.html
+++ b/companies/schrodinger.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/12/2023</p>
+                    <p class="updated">Last Updated 3/1/2023</p>
 
 
                     <h1 class="company-name"><a href="https://www.schrodinger.com/">Schrodinger</a></h1>
@@ -93,23 +93,25 @@
                          <section class="section-container">
                               <h2 class="list-header">Profile</h2>
                               <p class="profiles">
-                                   They are developing software used for drug discovery. Their primary software is about
-                                   physics based chemistry to design molecules. They are focused on translating physics based 
-                                   chemistry into computer aided design. They have added a lot of other software around
-                                   the drug discovery process to include Artificial Intelligence and Machine Learning. They use the 
-                                   software that develops the chemistry models to train the machine learning algorithms.
-                                   They license this software to other companies. They recently started
-                                   using their own software to develop their own pipeline. 
+                                   The drug discovery process takes about $1 billion dollars to develop a new drug. This can take years and 
+                                   still 90% of the drugs that enter the clinic fail. This company is combining physics based computer modeling 
+                                   with Machine Learning. They use the physics modeling software to create the data to teach the machine learning 
+                                   algorithms. This allows them to design and predict molecules for drug discovery. They expanding this by adding other 
+                                   software to help improve the drug development process. This can help improve the success rates of drugs that enter 
+                                   the clinic while reducing the amount of cost it takes to validate drug targets before entering the clinic. 
+                                   They currently license this software to other companies 
+                                   across several industries to develop chemical compounds. Now they are using it to develop their own pipeline 
+                                   of wholly owned drugs. 
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   I have been following Schrodinger for about a year now. I think Ramy Farid is a very solid CEO. He is 
+                                   I have been following Schrodinger for about a year now. I think Ramy Farid is a solid CEO. He is 
                                    focused on the tech and software side of the company. He seems like a good business person with 
                                    running software sales. They hired Karen Akinsanya to run the biotech side of the business for drug 
-                                   discovery. I think does a great job on science and drug discovery. I just wish they focused more on 
+                                   discovery. I think she does a great job on science and drug discovery. I just wish they focused more on 
                                    the biotech side as it's where the biggest potential exists.
                               </p>
                          </section> 
@@ -117,64 +119,88 @@
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                                   SGR-1505 - Their first drug is for MALT1. This is a Caspase Activation and Recruitment 
-                                   Domain (CARD). This plays a role in B cell activation. This plays a role in some B cell related 
-                                   cancers. There is no data yet from this program. 
+                                   SGR-1505 is their first drug for MALT1. This is a Caspase Activation and Recruitment 
+                                   Domain (CARD). This plays a role in B cell activation and cytokine production. This plays a role in some B cell related 
+                                   cancers which are driven by this signaling pathway. There is no data yet from this program, but it is opening sites now for 
+                                   the dose escalation study. 
                               </p>
                               <p class="profiles">
-                                   SGR-2291 - Their second drug is for CDC7. This plays a role in the cell cycle and the initiation 
+                                   SGR-2291 is their second drug for CDC7. This plays a role in the cell cycle and the initiation 
                                    of DNA replication. It could partner with current CDK4/6 inhibitors which do about $5 billion a year 
-                                   in sales. There is no data yet for this program.
+                                   in sales. This is IND enabling studies now.
                               </p>
                               <p class="profiles">
-                                   Wee1 - This target is one that has been attempted before by other companies, and it hasn't done so well.
+                                   SGR-3515 is their Wee1 drug. This target is one that has been attempted before by other companies, and it hasn't done so well.
                                    Those companies did not have this level of software assisted engineering. We will have to wait and see 
-                                   the data, but there is always room for this to succeed where others have failed. This plays a role in the 
-                                   cycle. This comes in during the last cell checkpoint before moving into mitosis.
+                                   the data, but there is always room for this to succeed where others have failed. This plays a role in the cell 
+                                   cycle. This comes in during the last cell checkpoint before moving into mitosis. They have finally selected 
+                                   a lead drug and will move it into IND enabling studies.
+                              </p>
+                              <p class="profiles">
+                                   LRRK is a drug target for Parkinson's Disease. They plan to advance a target for this program in 2024.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $597 million
+                                   Cash $567 million with Nimbus Distribution of $111 million
                               </p>
                               <p class="profiles">
-                                   Sales are projected to be $194 million in revenues for 2023 with their software side of the business. 
-                                   The classic Price to Sales goes from 10x to 14x. Even at 10x that gets you $194 million * 10 for
-                                   = $1.9 billion value.
+                                   Sales are projected to be $250 million in revenues for 2023 with their software side of the business. 
+                                   The classic Price to Sales for this space is around 10x. That gets you $2.5 billion valuations on 
+                                   the forward sales.
                               </p>
                               <p class="profiles">
-                                   MALT1 could be upward of $750 million for B cell related cancers. It won't work in all B cell cancers. 
+                                   SGR-1505 could be upward of $750 million for B cell related cancers. It won't work in all B cell cancers. 
                                    It will be a subset that is driven by MALT1 signaling. Even so, there are limited targeted therapies
                                    for those patients. If I give it a .1 multiplier since it has no data, I would get $75 million value.
                               </p>
                               <p class="profiles">
-                                   CDC7 could do well over $1 billion in sales if it works well with CDK4/6 inhibitors which earn about $5 billion
+                                   SGR-2291 could do well over $1 billion in sales if it works well with CDK4/6 inhibitors which earn about $5 billion
                                    a year. Even if it is only used in a small percentage of those patients, it could reach that $1 billion sales
                                    potential. This is still in development so I would only give it a .1 multiplier. That puts it at about $100
                                    million in value.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $2.11 billion market cap. Based on the 71 million shares outstanding
-                                   on the 10Q, that comes to $29.78.
+                                   SGR-3515 will highly depend on how this drug works out as many other drugs have failed in Wee1. I won't give 
+                                   any value to this program until we see some data to validate the drug they picked.
+                              </p>
+                              <p class="profiles">
+                                   All in, that is a $3.242 billion market cap. Based on the 71.5 million shares outstanding, that comes to $45.34.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   BMS partnership for oncology, immunology and neurology. They can receive up to $2.7 billion in milestones 
+                                   under these programs. They also get royalties in the mid single digits to low double digits.
                               </p>
+                              <p class="profiles">
+                                   Zai Labs has collaboration for world wide drug discovery in Oncology and DNA damage response. Schrodinger 
+                                   can elect to participate in 50% of the US if they opt in. They get up to $338 million in milestones and royalties 
+                                   on sales outside the US.
+                              </p>
+                              <p class="profiles">
+                                   Lilly partnership for drugs against a specific target that is not disclosed. They can get up to 
+                                   $425 million in milestones. They can get low single digit to low double digit royalties on these programs.
+                              </p>
+                              <p class="profiles">
+                                   Takeda has an option to license oncology products. They can opt to acquire a program during development, but 
+                                   details are not disclosed.
                          </section>
 
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
-                                   SGR-1505 Phase 1 Enrolling
+                                   SGR-1505 Phase 1 Enrolling for Dose Escalation
                               </p>
                               <p class="profiles">
                                    SGR-2291 IND Enabling Studies
+                              </p>
+                              <p class="profiles">
+                                   SGR-3515 Undergoing Target Selection
                               </p>
                          </section> 
 
