--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
                     </ul>
                </div> 
 
+               <div class="notice-layout">
+                    <h2 class="notice-header">Warning</h2>
+                    <p>
+                         It has come to my attention that at least 1 impostor now exists on Twitter that is pretending to be 
+                         me. I wanted to warn people to make sure you don't have any problems. The first thing I will tell you is 
+                         I will never ask anyone for money or crypto. I am a pay it forward kind of person. If you love my work, pick 
+                         a charity near and dear to your heart and pay it forward. If anyone contacts you asking for money, you should 
+                         immediately block them. Here is an official link to my <a href="https://twitter.com/Biotech2k1">Twitter Profile</a> so that you won't get the wrong person. 
+                         Always check for the blue checkmark on the profile as I am verified on Twitter. Also check the follower count. 
+                         One thing impostors can not clone is the follower count. They tend to have few followers. My count is currently 
+                         over 16,400. Please be safe. My user name on Twitter is <a href="https://twitter.com/Biotech2k1">@biotech2k1</a>.
+                    </p>
+               </div>
+
                <div class="front-page">
 
                     <section class="news-updates">
