Fate Profile Update

--- a/companies/fate.html
+++ b/companies/fate.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/14/2023</p>
+                    <p class="updated">Last Updated 3/1/2023</p>
 
                     <h1 class="company-name"><a href="https://fatetherapeutics.com/">Fate Therapeutics</a></h1>
 
@@ -105,10 +105,11 @@
                          <section class="section-container">
                               <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   I have been following Fate and Scott Wolchko for a few years now. He seems like a good CEO, but 
+                                   I have been following Fate and Scott Wolchko for about 6 years. He seems like a good CEO, but 
                                    they have had many setbacks in their development programs. First they dropped ProTmune and NK-100. 
                                    Now they had to reset and drop all their phase 1 NK programs to start over. I used to think he was a 
                                    powerful CEO, but now I have my doubts. I have been waiting for years for this investment to bear fruit.
+                                   Now I am going to have to wait and see how the remaining programs work out.
                               </p>
                          </section> 
                          
@@ -117,8 +118,14 @@
                               <p class="profiles">
                                    FT-576 is a CAR-NK cell therapy using a BCMA target. It has the enhanced CD16 receptor for improved use 
                                    with antibody therapies. It has the CD38 knockout so it can be combined with anti-CD38 antibodies for 
-                                   Multiple Myeloma. This program is just entering phase 1, but data could help inform us on how well this combination 
-                                   could work in Multiple Myeloma. 
+                                   Multiple Myeloma. This program has some early phase 1 data, but we will have to see more data to help inform us on how well this 
+                                   works in Multiple Myeloma. There is a rationale where a CD-38 antibody and a NK cell combination might offer improved 
+                                   benefits.
+                              </p>
+                              <p class="profiles">
+                                   FT-522 will be their next generation NK cell therapy for CD19. This includes the enhanced CD16, CD38 knockout, and 
+                                   Allo Defense Receptor. Because this targets 4-1BB on activated T cells, they plan to test it in autoimmune disorders
+                                   too. This should have IND submitted by mid 2023.
                               </p>
                               <p class="profiles">
                                    FT-819 is their first iPSC derived CAR-T cell therapy targeting CD19. This does not have the immune evasion edits 
@@ -131,13 +138,18 @@
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $475 million
+                                   Cash $441 million
                               </p>
                               <p class="profiles">
                                    FT-576 is for Multiple Myeloma which affects over 30,000 patients in the US alone. This will compete with other
                                    BCMA cell therapies. It would have to distinguish itself from the many other programs in this indication. I think 
-                                   with the edits and combinations it has, it really could. I would give this $1 billion potential if it works out well.
+                                   with the edits and combinations it has, it could offer benefits to patients over CD38 alone. I would give this $1 billion potential if it works out well.
                                    It gets a .1 multiplier for having no data yet. That is $100 million in value.
+                              </p>
+                              <p class="profiles">
+                                   FT-522 is their new CD19 CAR-NK therapy that includes the new Allo Defense Receptor. It is designed to work in combination 
+                                   with CD20 and CD38 antibodies. This could do upward of $500 million if it works out. I would give it .1 multiple for 
+                                   being preclinical. That makes it worth $50 million.
                               </p>
                               <p class="profiles">
                                    FT-819 is their CD19 CAR-T for Lymphoma. This does not have the immune evasion edits. I don't think this program 
@@ -145,14 +157,18 @@
                                    this with CAR-T therapies with more edits.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $575 million market cap. Based on the 97 million shares outstanding, that comes to $5.92.
+                                   All in, that is a $591 million market cap. Based on the 98.2 million shares outstanding, that comes to $6.01.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   They just terminated the Janssen Partnership.
+                              </p>
+                              <p class="profiles">
+                                   Ono Partnership for cell therapies. They can get up to $843 million in milestones and royalties in the mid 
+                                   single digits to low double digits.
                               </p>
                          </section>
 
@@ -165,7 +181,7 @@
                                    FT-819 Phase 1 Ongoing
                               </p>
                               <p class="profiles">
-                                   Next Gen therapies will see first IND in mid 2023
+                                   FT-522 IND Expected in Mid 2023
                               </p>
                          </section> 
 
