--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/28/2023: </strong> I update the profile for <a href="companies/fate.html">FATE</a>
+                                   after doing the 10K. 
+                              </p>
+                              <p> 
                                    <strong>2/28/2023: </strong> I update the profile for <a href="companies/schrodinger.html">SDGR</a>
                                    after doing the 10K. 
                               </p>
@@ -156,14 +160,7 @@
                                    <strong>2/28/2023: </strong> I update the profile for <a href="companies/revolution.html">RVMD</a>
                                    after doing the 10K. 
                               </p>
-                              <p> 
-                                   <strong>2/27/2023: </strong> I added several more data readouts to the Clinical Data page. I added
-                                   both CTX-110 and CB010. 
-                              </p>
-                              <p> 
-                                   <strong>2/26/2023: </strong> I added several more data readouts to the Clinical Data page. I added
-                                   both NTLA2001 and NTLA2002 along with Exa-cel data. 
-                              </p>
+                              
                          </div>
                     </section>
                </div>
