PacBio Profile Update

--- a/companies/pacbio.html
+++ b/companies/pacbio.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 2/16/2023</p>
+                    <p class="updated">Last Updated 3/1/2023</p>
 
                     <h1 class="company-name"><a href="https://www.pacb.com/">Pacific Biosciences</a></h1>
 
@@ -106,7 +106,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   I haven’t followed PacBio all that long, but I think the CEO Christian Henry is doing a good job so 
+                                   I haven't followed PacBio all that long, but I think the CEO Christian Henry is doing a good job so 
                                    far. They are one of the few sequencing companies to have both long and short read sequencing options. 
                                    They continue to drive innovation with 2 new product launches at the end of last year. Now we just have 
                                    to wait and see if they can translate that into sales growth.
@@ -140,14 +140,14 @@
                                    market cap. Their current value would be around $1.75 billion based on current sales.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $2.65 billion market cap. Based on the 246 million shares outstanding, that comes to $10.77. 
+                                   All in, that is a $2.522 billion market cap. Based on the 247 million shares outstanding, that comes to $10.21. 
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   They have a collaboration agreement with Invitae for testing and kits.
                               </p>
                          </section> 
 
