--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/28/2023: </strong> I update the profile for <a href="companies/pacbio.html">PACB</a>
+                                   after doing the 10K. 
+                              </p>
+                              <p> 
                                    <strong>2/28/2023: </strong> I update the profile for <a href="companies/fate.html">FATE</a>
                                    after doing the 10K. 
                               </p>
