--- a/index.html
+++ b/index.html
@@ -82,35 +82,30 @@
           <main>
                <div class="logo"><img class="page-logo" src="images/thumbnail.jpg" alt="Biotech2k.com"></div>
                
-               <div>
-                    <ul class="investor-link">
-                         <li>Quick Links:</li>
-                         <li><a href="investing/portfolio.html">My Portfolio</a></li>
-                         <li><a href="companies/companies.html">Company Profiles</a></li>
-                         <li><a href="investing/investing.html">Learn about Investing</a></li>
-                         <li><a href="learning/science.html">Learn about the Science</a></li>
-                    </ul>
-               </div> 
+               <div class="main-lists">
+                    <div>
+                         <ul class="investor-link">
+                              <li>Quick Links:</li>
+                              <li><a href="investing/portfolio.html">My Portfolio</a></li>
+                              <li><a href="companies/companies.html">Company Profiles</a></li>
+                              <li><a href="investing/investing.html">Learn about Investing</a></li>
+                              <li><a href="learning/science.html">Learn about the Science</a></li>
+                         </ul>
+                    </div> 
 
-               <div class="notice-layout">
-                    <h2 class="notice-header">Warning</h2>
-                    <p>
-                         It has come to my attention that at least 1 impostor now exists on Twitter that is pretending to be 
-                         me. I wanted to warn people to make sure you don't have any problems. The first thing I will tell you is 
-                         I will never ask anyone for money or crypto. I am a pay it forward kind of person. If you love my work, pick 
-                         a charity near and dear to your heart and pay it forward. If anyone contacts you asking for money, you should 
-                         immediately block them. Here is an official link to my <a href="https://twitter.com/Biotech2k1">Twitter Profile</a> so that you won't get the wrong person. 
-                         Always check for the blue checkmark on the profile as I am verified on Twitter. Also check the follower count. 
-                         One thing impostors can not clone is the follower count. They tend to have few followers. My count is currently 
-                         over 16,400. Please be safe. My user name on Twitter is <a href="https://twitter.com/Biotech2k1">@biotech2k1</a>.
-                    </p>
+                    <div>
+                         <ul class="investor-link">
+                              <li>Articles</li>
+                              <li><a href="#tomorrowinnovation">You Can Have the Future of Towmorrow Today</a></li>
+                         </ul>
+                    </div>
                </div>
 
                <div class="front-page">
 
                     <section class="news-updates">
                          <div>
-                              <h2 class="section-title">Recent News</h2>
+                              <h2 class="news-title">Recent News</h2>
                               <p>
                                    <strong>2/10/2023: </strong> I added to my <a href="companies/beam.html">BEAM</a> position today
                                    to bring it up to 5.22% position.
@@ -131,7 +126,7 @@
 
                     <section class="news-updates">
                          <div>
-                              <h2 class="section-title">Website Updates</h2>
+                              <h2 class="news-title">Website Updates</h2>
                               <p> 
                                    <strong>3/1/2023: </strong> I update the profile for <a href="companies/pacbio.html">PACB</a>
                                    after doing the 10K. 
@@ -168,6 +163,55 @@
                          </div>
                     </section>
                </div>
+
+               <article class="container">
+                    <h2 class="section-title" id="tomorrowinnovation">You Can Have The Future of Tomorrow Today</h2>
+                    <p>
+                         I have heard many people try to call this crash in biotech the end of the Biotechnology sector. 
+                         A sector that has been around for decades. One of the most necessary sectors in the entire 
+                         market. Here I am going to lay out for you the opposite case. I have been investing in tech and 
+                         biotech for 27 years. I have seen so much technology that excites me about the future, and I see 
+                         it today.
+                    </p>
+                    <p>
+                         The biggest question I always get in biotech investing is when will we run out of things to 
+                         discover or great new technologies to invent. I my response is we will never run out until we cure 
+                         every disease. We are entering a very exciting new era in biotechnology where we have new tools that 
+                         could completely redefine the future. People who listen to those naysayers could be missing the best 
+                         opportunity of their lifetimes. I actually have more excitement and investment ideas today than I ever 
+                         had in my 27 years of investing. New technologies like using AI or Machine Learning to make new 
+                         connections in biology or genetics could revolutionize how we approach drug discovery. Automation can 
+                         reduce workloads and simplify redundant processes to bring down costs of drug discovery. We have come to 
+                         call this space of biotech the #TechBio space. This is just beginning to get started. Right now everyone 
+                         is skeptical of this space. I think in 10 years, any company that did not embrace these technologies 
+                         will fade away into the history books of time. There are going to be new leaders in this space that 
+                         emerge to become tomorrow's Google or Amazon. We can find them today for a mere fraction of what they 
+                         could be tomorrow. Most of these companies are selling near their levels of cash. The discovery of new 
+                         technology will always get funding by the visionary few. The next space of excitement is Gene Editing 
+                         tools like CRISPR. These tools are in their infancy and will continue to evolve as bright mind continue 
+                         to find new ways to use them to do editing safer and easier. Barriers like delivery will be broken 
+                         and there will be a revolution in fixing and removing Genetic Diseases from the human race. The 
+                         companies that succeed here will be worth fortunes. The power of gene editing has given birth to Synthetic
+                         Biology. This is the ability to take gene editing tools and use it to reprogram microbes to make them 
+                         beneficial. We can reprogram pathogens to produce fertilizer or scrub carbon from the environment. The 
+                         future ability of scientist to rewrite life on earth using gene editing can be exciting and terribly 
+                         frighting. It is an awesome power and responsibility. There is going to be a need for Biosecurity to 
+                         protect use from the ability of bad actors to misuse this technology.  Rewriting life won't just stop 
+                         with microbes. We can use it to create human cells from stem cells. We have technologies like Induced 
+                         Pluripotent Stem cells called iPSC that can allow us to reprogram human cells. We can create cell therapies 
+                         to fight cancer already today. This is just getting started as we learn more about cell biology and 
+                         human biology. I believe someday we will be able to grow entire organs from a single cell donation. The 
+                         last area will be the revolution of Sequencing. This has been a space of rapid evolution. We are still 
+                         far from the ability to do end to end sequencing on every genome on earth for a very low cost. Someday, we 
+                         will get our genome sequenced and we will know everything about ourselves. The risk and the benefits. We 
+                         will be able to tailor medicine to the individual. Personalized medicine is only just beginning with 
+                         cancer therapies. Someday we will know our risk long before it even becomes a disease. We will be focused 
+                         more on prevention and correction before the disease occurs. Combining sequencing with other therapies 
+                         like gene editing could allow sickness to be corrected before it happens. While many have taken to writing 
+                         article predicting the end of biotechnology, I have taken to the spreading of the Science Of The Future. 
+                         I think scary sells a lot of articles, but vision will favor the investor.
+                    </p>
+               </article>
                
           </main>
 
